--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             background-color: deepskyblue;
             color: orangered;
             list-style: none;
-
+          
         }
         #list li{
             float: left;
@@ -80,6 +80,7 @@
             line-height: 45px;
             color: black;
             border-bottom: #cccccc solid;
+            display:flex;
         }
         a{
             text-decoration:none;
