--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             margin-top: -20px;
             background-color: white;
             width: 100%;
+            min-width: 100%; 
             height: 45px;
             line-height: 45px;
             color: black;
